<resources>
    <string name="app_name">Agenda Jeff</string>
    <string name="name">Agenda Jeff</string>
    <string name="button_iniciar">Iniciar</string>
    <string name="logo">Agenda Jeff</string>
    <string name="title_activity_materias">Registro</string>
    <string name="registro">Ingresa tus datos</string>
    <string name="name_registro">Nombre</string>
    <string name="name_registro2">Escribe tu nombre</string>
    <string name="matricula_registro">Matricula</string>
    <string name="matricula_registro2">Ingresa tu matricula</string>
    <string name="carrera_registro">Licenciatura</string>
    <string name="carrera_registro2">Escribe el nombre de tu carrera</string>
    <string name="button_registro">Continuar</string>

    <string name="nombre_materia">Nombre Materia</string>
    <string name="button_next">Continuar</string>


    <string name="name_materia">Escribe el nombre de tus materias</string>
    <string name="button_agregar">Agregar materia</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Materia 1</string>
    <string name="menu_gallery">Materia 2</string>
    <string name="menu_slideshow">Materia 3</string>
    <string name="menu_tools">Materia 4</string>
    <string name="menu_share">Materia 5</string>
    <string name="menu_send">Materia 6</string>


    <string name="user_name">Nombre alumno</string>
    <string name="user_matricula">Matricula</string>
</resources>

