<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registro" android:background="@drawable/ic_background">

    <TextView
            android:text="@string/registro"
            android:layout_width="162dp"
            android:layout_height="34dp"
            android:id="@+id/textView3" android:textColor="#FFFFFF"
            android:textSize="18sp" app:fontFamily="@font/allerta_stencil" android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="124dp" android:layout_marginStart="124dp"/>
    <TextView
            android:text="@string/name_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="152dp"
            tools:layout_editor_absoluteX="45dp" android:id="@+id/textView4" android:textColor="#FFFFFF"
            app:fontFamily="@font/denk_one"/>
    <EditText
            android:layout_width="327dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            tools:layout_editor_absoluteY="187dp" tools:layout_editor_absoluteX="45dp" android:id="@+id/editText"
            android:hint="@string/name_registro2"/>
</android.support.constraint.ConstraintLayout>