<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@drawable/ic_background">
    <ImageView
            android:layout_width="171dp"
            android:layout_height="151dp" app:srcCompat="@mipmap/ic_agenda"
            android:id="@+id/imageView4" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="107dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="131dp" android:layout_marginStart="131dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="109dp"
            android:layout_marginRight="109dp" android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/name"
            android:layout_width="172dp"
            android:layout_height="114dp"
            android:id="@+id/textView" app:fontFamily="@font/allerta_stencil"
            android:textColor="#FFFFFF" android:textSize="36sp" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="131dp" android:layout_marginStart="131dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="108dp"
            android:layout_marginRight="108dp"/>
    <Button
            android:text="@string/button_iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_iniciar" android:background="#3A8172"
            app:fontFamily="@font/allerta_stencil"
            android:textColor="#FFFFFF" android:layout_marginTop="65dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="173dp" android:layout_marginStart="173dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp" android:layout_marginBottom="176dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>