<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_materias"
        tools:context=".Materias" android:background="@drawable/ic_background">

    <TextView
            android:text="@string/name_materia"
            android:layout_width="142dp"
            android:layout_height="49dp"
            android:id="@+id/textView2" android:textColor="#FFFFFF"
            android:textSize="14sp" app:fontFamily="@font/allerta_stencil" android:layout_marginTop="55dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="140dp" android:layout_marginStart="140dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="141dp"
            android:layout_marginRight="141dp" android:gravity="center"/>
    <Button
            android:text="@string/button_agregar"
            android:layout_width="88dp"
            android:layout_height="40dp"
            app:fontFamily="@font/allerta_stencil"
            android:id="@+id/button_continuar" android:textColor="#FFFFFF"
            android:background="#3A8172" android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="31dp" android:layout_marginStart="31dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="292dp" android:layout_marginRight="292dp"
            android:layout_marginBottom="108dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="348dp"
            android:layout_height="353dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:id="@+id/materiasRecycler"/>
    <Button
            android:text="@string/button_next"
            android:layout_width="96dp"
            android:layout_height="45dp"
            android:id="@+id/button_siguiente" android:textColor="#FFFFFF"
            android:background="#3A8172" app:layout_constraintStart_toEndOf="@+id/button_continuar"
            android:layout_marginLeft="157dp" android:layout_marginStart="157dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="39dp"
            android:layout_marginRight="39dp" android:layout_marginBottom="103dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>